packages/components/src/LightBox/LightBox.css
.next,
.prev {
  display: flex;
  position: absolute;
  top: 50%;
  z-index: var(--elevation-base);
  transform: translateY(-50%);
}

.next {
  right: var(--space-base);
}

.prev {
  left: var(--space-base);
}

.lightboxWrapper {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--elevation-modal);
  width: 100%;
  height: 100%;
  justify-content: space-between;
  flex-direction: column;
}

.toolbar {
  display: flex;
  z-index: var(--elevation-base);
  padding: var(--space-small) var(--space-base);
  color: var(--color-text--reverse--secondary);
  font-size: var(--typography--fontSize-large);
  background-color: var(--color-surface--reverse);
  justify-content: space-between;
}

.title {
  display: inline-flex;
  align-items: center;
}

.imagesWrapper {
  display: flex;
  justify-content: center;
}

.overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: var(--color-overlay);
}

.image {
  position: absolute;
  right: 0;
  left: 0;
  margin: auto;
}

